Fix scrollbar for event modal

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -173,3 +173,7 @@
     @apply bg-background text-foreground;
   }
 }
+
+html {
+  scrollbar-gutter: stable;
+}
